@@ -29,6 +29,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #6231: Fix xml.etree.ElementInclude to include the tail of the
+  current node.
+
 - Issue #6869: Fix a refcount problem in the _ctypes extension.
 
 - Issue5504 - ctypes should now work with systems where mmap can't be
